--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/start_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/start_scene.fxml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.RadialGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.text.Font?>
 
-<StackPane prefHeight="760.0" prefWidth="1300.0" styleClass="rootPane" stylesheets="@../css/start_scene.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.StartController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/start_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.StartController">
     <children>
         <Group scaleX="1.5" scaleY="1.5">
             <children>
                 <AnchorPane fx:id="rootPane" layoutX="184.0" layoutY="-111.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="797.0">
                     <children>
-                        <Button fx:id="playBtn" alignment="CENTER" layoutX="32.0" layoutY="296.0" mnemonicParsing="false" onAction="#switchToConnection" prefHeight="68.0" prefWidth="351.0" styleClass="playBtn" stylesheets="@../css/start_scene.css" text="Start " textAlignment="CENTER" textFill="WHITE">
+                        <Button fx:id="playBtn" alignment="CENTER" layoutX="63.0" layoutY="300.0" mnemonicParsing="false" onAction="#switchToConnection" prefHeight="102.0" prefWidth="200.0" styleClass="playBtn" stylesheets="@../css/start_scene.css" text="Create a new game" textAlignment="CENTER" textFill="WHITE">
                             <font>
-                                <Font name="Libian SC Regular" size="30.0" />
+                                <Font name="Libian SC Regular" size="24.0" />
                             </font></Button>
-                        <Button fx:id="quitBtn" layoutX="422.0" layoutY="294.0" mnemonicParsing="false" onMouseClicked="#closeJavaFxMain" prefHeight="68.0" prefWidth="351.0" styleClass="quitBtn" stylesheets="@../css/start_scene.css" text="Exit " textAlignment="CENTER" textFill="WHITE">
+                        <Button fx:id="quitBtn" layoutX="276.0" layoutY="300.0" mnemonicParsing="false" onMouseClicked="#closeJavaFxMain" prefHeight="102.0" prefWidth="200.0" styleClass="quitBtn" stylesheets="@../css/start_scene.css" text="Join a game" textAlignment="CENTER" textFill="WHITE">
                             <font>
-                                <Font name="Libian SC Regular" size="30.0" />
+                                <Font name="Libian SC Regular" size="24.0" />
                             </font>
                             <textFill>
                                 <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
@@ -42,6 +46,27 @@
                                 <Image url="@../Publisher_material/Title 2000x618px.png" />
                             </image>
                         </ImageView>
+                  <Button fx:id="quitBtn1" layoutX="489.0" layoutY="300.0" mnemonicParsing="false" onMouseClicked="#closeJavaFxMain" prefHeight="102.0" prefWidth="200.0" styleClass="quitBtn" stylesheets="@../css/start_scene.css" text="Exit " textAlignment="CENTER">
+                     <textFill>
+                        <RadialGradient centerY="1.0" radius="0.5">
+                           <stops>
+                              <Stop>
+                                 <color>
+                                    <Color />
+                                 </color>
+                              </Stop>
+                              <Stop offset="1.0">
+                                 <color>
+                                    <Color red="1.0" green="1.0" blue="1.0" />
+                                 </color>
+                              </Stop>
+                           </stops>
+                        </RadialGradient>
+                     </textFill>
+                     <font>
+                        <Font name="Libian SC Regular" size="24.0" />
+                     </font>
+                  </Button>
                     </children>
                 </AnchorPane>
             </children>
