--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/start_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/start_scene.fxml
@@ -34,7 +34,7 @@
                               <Insets bottom="30.0" />
                            </VBox.margin>
                         </Button>
-                              <Button fx:id="quitBtn" mnemonicParsing="false" onMouseClicked="#closeJavaFxMain" prefHeight="90.0" prefWidth="575.0" styleClass="quitBtn" stylesheets="@../css/start_scene.css" text="Join a game" textAlignment="CENTER" textFill="#fffcfc">
+                              <Button fx:id="quitBtn" mnemonicParsing="false" onMouseClicked="#JoinGame" prefHeight="90.0" prefWidth="575.0" styleClass="joinBtn" stylesheets="@../css/start_scene.css" text="Join a game" textAlignment="CENTER" textFill="#fffcfc">
                                   <font>
                                       <Font name="Libian SC Regular" size="40.0" />
                                   </font>
