--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/start_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/start_scene.css
@@ -34,3 +34,22 @@
     -fx-effect: dropshadow(gaussian, #f2e0d6, 20, 0.3, 0, 0);
     -fx-cursor: hand;
 }
+
+.joinBtn {
+
+    fx-background-image: url("../misc/base_pagina2.jpg");
+
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+    -fx-background-radius: 0;
+    -fx-border-radius: 15px;
+    -fx-background-color: transparent;
+}
+
+
+.joinBtn:hover {
+    -fx-effect: dropshadow(gaussian, #f2e0d6, 20, 0.3, 0, 0);
+    -fx-cursor: hand;
+
+
+}
