--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/CreateOrJoinGame_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/CreateOrJoinGame_scene.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -53,7 +56,7 @@
                     <children>
                   <AnchorPane prefHeight="222.0" prefWidth="1510.0">
                      <children>
-                        <Button fx:id="CreateNewGame" layoutX="616.0" layoutY="-3.0" mnemonicParsing="false"  onMouseClicked="#CreateGame" prefHeight="60.0" prefWidth="314.0" text="CREATE A NEW GAME " textFill="#fff4f4">
+                        <Button fx:id="CreateNewGame" layoutX="616.0" layoutY="-3.0" mnemonicParsing="false" onMouseClicked="#CreateGame" prefHeight="60.0" prefWidth="314.0" text="CREATE A NEW GAME " textFill="#fff4f4">
                            <font>
                               <Font name="Libian SC Regular" size="13.0" />
                            </font>
@@ -63,11 +66,30 @@
                               <Font name="Libian SC Regular" size="13.0" />
                            </font>
                         </Button>
-                        <Button fx:id="EXIT" layoutX="615.0" layoutY="146.0" mnemonicParsing="false"  onMouseClicked="#ExitGame" prefHeight="60.0" prefWidth="314.0" text="EXIT" textFill="#fff4f4">
+                        <Button fx:id="EXIT" layoutX="615.0" layoutY="146.0" mnemonicParsing="false" onMouseClicked="#ExitGame" prefHeight="60.0" prefWidth="314.0" text="EXIT" textFill="#fff4f4">
                            <font>
                               <Font name="Libian SC Regular" size="13.0" />
                            </font>
                         </Button>
+                        <Group fx:id="NoGamesInLobby" layoutX="731.0" layoutY="37.0">
+                           <children>
+                              <DialogPane fx:id="NolobbygamesPane" layoutX="-276.0" layoutY="-44.0" prefHeight="190.0" prefWidth="526.0" visible="false">
+                                 <effect>
+                                    <GaussianBlur />
+                                 </effect>
+                              </DialogPane>
+                              <Button fx:id="OkBtn" layoutX="-36.0" layoutY="42.0" mnemonicParsing="false" onMouseClicked="#PanelDisappearing" text="OK" textFill="WHITE" visible="false">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Button>
+                              <Label fx:id="NoLobbyGamesText" layoutX="-177.0" layoutY="-34.0" prefHeight="53.0" prefWidth="341.0" text="No available games in the lobby" visible="false">
+                                 <font>
+                                    <Font name="Libian SC Regular" size="28.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </Group>
                      </children>
                   </AnchorPane>
                     </children>
