--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/AddressIp_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/AddressIp_scene.fxml
@@ -1,78 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="600.0" styleClass="rootPane" stylesheets="@../css/server_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.ServerSettingsController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/server_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.ServerSettingsController">
     <children>
-        <Group scaleX="2.45" scaleY="1.9">
+        <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1510.0">
             <children>
-                <AnchorPane fx:id="PaneforParquet" prefHeight="524.0" prefWidth="573.0" styleClass="rootPane" stylesheets="@../css/server_scene.css">
+                <VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="194.0" prefWidth="1503.0">
                     <children>
-                        <ImageView fitHeight="158.0" fitWidth="158.0" layoutX="-1.0" layoutY="366.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Piante1.2.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="184.0" fitWidth="158.0" layoutX="156.0" layoutY="366.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Gatti1.1.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="158.0" fitWidth="286.0" layoutX="313.0" layoutY="366.0">
-                            <image>
-                                <Image url="@../itemtiles/Libri1.2.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="146.0" fitWidth="173.0" layoutX="207.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fitHeight="183.0" fitWidth="197.0" layoutX="237.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Giochi1.1.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="184.0" fitWidth="183.0" layoutX="416.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Cornici1.3.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="183.0" fitWidth="266.0" layoutX="-1.0" layoutY="-4.0">
-                            <image>
-                                <Image url="@../itemtiles/Trofei1.1.png" />
-                            </image>
-                        </ImageView>
-                        <TextField fx:id="ipAddress" layoutX="233.0" layoutY="207.0" promptText="                127.0.0.1" styleClass="rounded-input" stylesheets="@../css/server_scene.css" />
-                        <TextField fx:id="port" layoutX="235.0" layoutY="255.0" promptText="                   1243" styleClass="rounded-input" stylesheets="@../css/server_scene.css" />
-                        <Label layoutX="301.0" layoutY="165.0" text="IP" textFill="WHITE">
+                        <HBox alignment="CENTER" minWidth="-Infinity" prefHeight="200.0" prefWidth="1510.0">
+                            <children>
+                                <ImageView fitHeight="250.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Giochi1.1.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Cornici1.3.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="250.0" fitWidth="250.0" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Trofei1.1.png" />
+                                    </image>
+                                </ImageView>
+                            </children>
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin>
+                        </HBox>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="60.0" />
+                    </VBox.margin>
+                </VBox>
+                <VBox alignment="CENTER" prefHeight="282.0" prefWidth="1510.0">
+                    <children>
+                        <Label alignment="CENTER" prefHeight="54.0" prefWidth="330.0" text="IP" textFill="WHITE">
+                            <font>
+                                <Font name="Libian SC Regular" size="36.0" />
+                            </font>
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin>
+                        </Label>
+                        <TextField fx:id="ipAddress" alignment="CENTER" maxWidth="-Infinity" prefHeight="49.0" prefWidth="300.0" promptText="127.0.0.1" styleClass="rounded-input" stylesheets="@../css/server_scene.css">
+                            <VBox.margin>
+                                <Insets top="20.0" />
+                            </VBox.margin>
+                            <font>
+                                <Font size="30.0" />
+                            </font>
+                        </TextField>
+                        <Label alignment="CENTER" prefHeight="54.0" prefWidth="330.0" text="PORT" textFill="WHITE">
                             <font>
                                 <Font name="Libian SC Regular" size="36.0" />
                             </font>
                         </Label>
-                        <Label layoutX="288.0" layoutY="212.0" text="port" textFill="WHITE">
+                        <TextField fx:id="port" alignment="CENTER" maxWidth="-Infinity" prefHeight="49.0" prefWidth="300.0" promptText="1243" styleClass="rounded-input" stylesheets="@../css/server_scene.css">
                             <font>
-                                <Font name="Libian SC Regular" size="36.0" />
+                                <Font size="30.0" />
                             </font>
-                        </Label>
-                        <Button fx:id="tryToConnectButton" layoutX="265.0" layoutY="287.0" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="31.0" prefWidth="97.0" styleClass="button" stylesheets="@../css/server_scene.css" text="Try to connect " textFill="WHITE">
+                            <VBox.margin>
+                                <Insets bottom="20.0" />
+                            </VBox.margin>
+                        </TextField>
+                        <Button fx:id="tryToConnectButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="40.0" prefWidth="250.0" styleClass="button" stylesheets="@../css/server_scene.css" text="CONNECT" textFill="WHITE">
                             <font>
-                                <Font name="Libian SC Regular" size="11.0" />
+                                <Font size="32.0" />
                             </font>
                         </Button>
-                  <Text fx:id="WrongValueInputs" fill="#c31a1a" layoutX="213.0" layoutY="341.0" strokeType="OUTSIDE" strokeWidth="0.0" text="WRONG INPUTS, PLEASE REINSERT THEM" visible="false">
-                     <font>
-                        <Font name="Libian SC Regular" size="13.0" />
-                     </font>
-                  </Text>
                     </children>
-                </AnchorPane>
+                    <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                    </cursor>
+                </VBox>
+                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                    <children>
+                        <Label fx:id="InvalidNickname" text="Invalid nickname, please choose another one" textFill="#e84646" visible="false">
+                            <font>
+                                <Font name="Libian SC Regular" size="64.0" />
+                            </font>
+                        </Label>
+                    </children>
+                </VBox>
+                <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
+                    <children>
+                        <HBox alignment="BOTTOM_CENTER" minHeight="-Infinity" prefHeight="198.0" prefWidth="1497.0">
+                            <children>
+                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Piante1.2.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="334.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Gatti1.1.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="250.0" fitWidth="485.0" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Libri1.2.png" />
+                                    </image>
+                                </ImageView>
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
             </children>
-        </Group>
+        </VBox>
     </children>
 </StackPane>
