--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -62,6 +63,7 @@
                         <Font size="28.0" />
                     </font>
                 </Button>
+            <ListView fx:id="listView" prefHeight="200.0" prefWidth="200.0" />
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                     <children>
                   <Label fx:id="InvalidGameChoice" alignment="CENTER" contentDisplay="RIGHT" prefHeight="36.0" prefWidth="890.0" text="There is no  available game in  the lobby with this name, please insert another name" textFill="#d73d3d" visible="false">
