--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/RMIorSocket_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/RMIorSocket_scene.fxml
@@ -1,61 +1,117 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="600.0" styleClass="rootPane" stylesheets="@../css/server_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.RMIorSocketController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/server_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.RMIorSocketController">
     <children>
-        <Group scaleX="2.45" scaleY="1.9">
+        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
             <children>
-                <AnchorPane fx:id="PaneforParquet" prefHeight="524.0" prefWidth="573.0" styleClass="rootPane" stylesheets="@../css/server_scene.css">
+                <VBox prefHeight="200.0" prefWidth="100.0">
                     <children>
-                        <ImageView fitHeight="158.0" fitWidth="158.0" layoutX="-1.0" layoutY="366.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Piante1.2.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="184.0" fitWidth="158.0" layoutX="156.0" layoutY="366.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Gatti1.1.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="158.0" fitWidth="286.0" layoutX="313.0" layoutY="366.0">
-                            <image>
-                                <Image url="@../itemtiles/Libri1.2.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="146.0" fitWidth="173.0" layoutX="207.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fitHeight="183.0" fitWidth="197.0" layoutX="237.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Giochi1.1.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="184.0" fitWidth="183.0" layoutX="416.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../itemtiles/Cornici1.3.png" />
-                            </image>
-                        </ImageView>
-                        <ImageView fitHeight="183.0" fitWidth="266.0" layoutX="-1.0" layoutY="-4.0">
-                            <image>
-                                <Image url="@../itemtiles/Trofei1.1.png" />
-                            </image>
-                        </ImageView>
-                        <Label layoutX="147.0" layoutY="179.0" text="Choose a connection type" textFill="WHITE">
-                            <font>
-                                <Font name="Libian SC Regular" size="36.0" />
-                            </font>
-                        </Label>
-                  <RadioButton fx:id="rmibutton" layoutX="164.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#createRMIconnection" text="RMI" />
-                  <RadioButton fx:id="socketbutton" layoutX="350.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#createsocketconnection" text="Socket " />
+                        <HBox alignment="CENTER" prefHeight="221.0" prefWidth="1510.0">
+                            <children>
+                                <ImageView fitHeight="250.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Giochi1.1.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Cornici1.3.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="250.0" fitWidth="250.0" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Trofei1.1.png" />
+                                    </image>
+                                </ImageView>
+                            </children>
+                        </HBox>
                     </children>
-                </AnchorPane>
+                    <VBox.margin>
+                        <Insets bottom="60.0" />
+                    </VBox.margin>
+                </VBox>
+                <Label alignment="CENTER" prefHeight="53.0" prefWidth="464.0" text="Choose a connection type" textFill="WHITE">
+                    <font>
+                        <Font name="Libian SC Regular" size="36.0" />
+                    </font>
+                    <VBox.margin>
+                        <Insets bottom="20.0" />
+                    </VBox.margin>
+                </Label>
+                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                    <children>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <RadioButton fx:id="TCPbutton" mnemonicParsing="false" prefHeight="40.0" text="TCP (socket)" textFill="WHITE">
+                                    <font>
+                                        <Font size="25.0" />
+                                    </font>
+                                    <toggleGroup>
+                                        <ToggleGroup fx:id="connectionType" />
+                                    </toggleGroup>
+                                    <HBox.margin>
+                                        <Insets right="50.0" />
+                                    </HBox.margin>
+                                </RadioButton>
+                                <RadioButton fx:id="RMIbutton" mnemonicParsing="false" prefHeight="40.0" text="RMI" textFill="WHITE" toggleGroup="$connectionType">
+                                    <font>
+                                        <Font size="25.0" />
+                                    </font>
+                                    <HBox.margin>
+                                        <Insets />
+                                    </HBox.margin>
+                                </RadioButton>
+                            </children>
+                            <VBox.margin>
+                                <Insets top="-40.0" />
+                            </VBox.margin>
+                        </HBox>
+                  <Button fx:id="okButton" mnemonicParsing="false" onMouseClicked="#createConnection" prefHeight="56.0" prefWidth="157.0" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
+                     <font>
+                        <Font size="26.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Button>
+                    </children>
+                </VBox>
+                <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
+                    <children>
+                        <HBox alignment="BOTTOM_CENTER" prefHeight="273.0" prefWidth="1513.0">
+                            <children>
+                                <ImageView fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Piante1.2.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="334.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Gatti1.1.png" />
+                                    </image>
+                                </ImageView>
+                                <ImageView fitHeight="250.0" fitWidth="485.0" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../itemtiles/Libri1.2.png" />
+                                    </image>
+                                </ImageView>
+                            </children>
+                        </HBox>
+                    </children>
+                </VBox>
             </children>
-        </Group>
+        </VBox>
     </children>
 </StackPane>
