--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -58,12 +57,11 @@
                         <Font size="21.0" />
                     </font>
                 </TextField>
-                <Button fx:id="OKButton" mnemonicParsing="false" onMouseClicked="#SendGameNameChoise" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
+                <Button fx:id="OKButton" mnemonicParsing="false"  prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
                     <font>
                         <Font size="28.0" />
                     </font>
                 </Button>
-            <ListView fx:id="listView" prefHeight="200.0" prefWidth="200.0" />
                 <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                     <children>
                   <Label fx:id="InvalidGameChoice" alignment="CENTER" contentDisplay="RIGHT" prefHeight="36.0" prefWidth="890.0" text="There is no  available game in  the lobby with this name, please insert another name" textFill="#d73d3d" visible="false">
